--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'/>
         <link href='https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css' rel='stylesheet'/>
         <link rel="stylesheet" href="style.css">
-        <title>3D Theme</title>
+        <title>LarkX | LinkTree</title>
    </head>
    <body>
         <div class='navbar no-items section' id='navbar'></div>
-        <img alt='User Photo' id='userPhoto' src='https://1.bp.blogspot.com/-v4Yi0oSR0-c/X1YRNalQZLI/AAAAAAAAA6U/xMnEQKBDgPgKFXQONoHthgMbQ91QURBlACLcBGAsYHQ/s0/technopreneur.jpg'/>
+        <img alt='User Photo' id='userPhoto' src='https://1.bp.blogspot.com/-v4Yi0oSR0-c/X1YRNalQZLI/AAAAAAAAA6U/xMnEQKBDgPgKFXQONoHthgMbQ91QURBlACLcBGAsYHQ/s0/technopreneur.jpg' style="border-radius:100px;"/>
         <spam id='userName'>3D Theme by Farell Faiz</spam>
         <div id='links'>
             <a class='link' href='#yourLink' target='_blank'><i aria-hidden='true' class='fa fa-camera'></i>&#160;&#160;Photography Submission</a>
