--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'/>
         <link href='https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css' rel='stylesheet'/>
         <link rel="stylesheet" href="style.css">
-        <title>LarkX | LinkTree</title>
+        <title>LarkX | Links</title>
    </head>
    <body>
         <div class='navbar no-items section' id='navbar'></div>
