--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
         <img alt='User Photo' id='userPhoto' src='https://images-ext-2.discordapp.net/external/jrfNm-FuTPTHJgMlBz8ZQqgmc8AXdqtRm3yDVZCBHn8/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/507585837802848257/e55dce40683184d64224c3ea6cb6aff9.webp' style="border-radius:100px;"/>
         <spam id='userName'>@larkx#0001</spam>
         <div id='links'>
-            <a class='link' href='#yourLink' target='_blank'><i aria-hidden='true' class='fa fa-camera'></i>&#160;&#160;Photography Submission</a>
-            <a class='link' href='#yourLink' target='_blank'><i aria-hidden='true' class='ri-discord-fill'></i>&#160;&#160;Discord Server</a>
+            <a class='link' href='https://larkx.xyz/discord'><i aria-hidden='true'></i>Discord</a>
+            <a class='link' href='#yourLink' target='_blank'><i aria-hidden='true'></i>&#160;&#160;Discord Server</a>
             <a class='link' href='#yourLink' target='_blank'><i aria-hidden='true' class='fa fa-video-camera'></i>&#160;&#160;Zoom Webinar Room</a>
         </div>
         <div class='footer'>
             <a href='#yourLink' target='_blank'>
-                <i aria-hidden='true' class='fa fa-globe media' style='line-height: 38px; font-size: 10px;'></i>
+                <i aria-hidden='true' class='fa fa-globe media' style='line-height: 38px; font-size: 20px;'></i>
             </a>
             <a href='#yourLink' target='_blank'>
-                <i aria-hidden='true' class='fa fa-envelope-o media' style='line-height: 38px; font-size: 10px;'></i>
+                <i aria-hidden='true' class='fa fa-envelope-o media' style='line-height: 38px; font-size: 20px;'></i>
             </a>
             <a href='#yourLink'>
-                <i aria-hidden='true' class='fa fa-comments-o media' style='line-height: 38px; font-size: 10px;'></i>
+                <i aria-hidden='true' class='fa fa-comments-o media' style='line-height: 38px; font-size: 20px;'></i>
             </a>
             <a href='#yourLink' target='_blank'>
                 <i aria-hidden='true' class='fa fa-instagram media' style='line-height: 38px; font-size: 10px;'></i>
