--- a/index.html
+++ b/index.html
@@ -13,21 +13,18 @@
         <spam id='userName'>@larkx#0001</spam>
         <div id='links'>
             <a class='link' href='https://larkx.xyz/discord'><i aria-hidden='true'></i>Discord</a>
-            <a class='link' href='#yourLink' target='_blank'><i aria-hidden='true'></i>&#160;&#160;Discord Server</a>
-            <a class='link' href='#yourLink' target='_blank'><i aria-hidden='true' class='fa fa-video-camera'></i>&#160;&#160;Zoom Webinar Room</a>
+            <a class='link' href='https://tiktok.com/@larkpczk'><i aria-hidden='true'></i>TikTok</a>
+            <a class='link' href='https://larkx.xyz/s/instagram'><i aria-hidden='true'></i>Instagram</a>
         </div>
         <div class='footer'>
-            <a href='#yourLink' target='_blank'>
+            <a href='https://larkx.xyz/' target='_blank'>
                 <i aria-hidden='true' class='fa fa-globe media' style='line-height: 38px; font-size: 20px;'></i>
             </a>
-            <a href='#yourLink' target='_blank'>
+            <a href='mailto:contact@larkx.xyz' target='_blank'>
                 <i aria-hidden='true' class='fa fa-envelope-o media' style='line-height: 38px; font-size: 20px;'></i>
             </a>
-            <a href='#yourLink'>
-                <i aria-hidden='true' class='fa fa-comments-o media' style='line-height: 38px; font-size: 20px;'></i>
-            </a>
-            <a href='#yourLink' target='_blank'>
-                <i aria-hidden='true' class='fa fa-instagram media' style='line-height: 38px; font-size: 10px;'></i>
+            <a href='https://larkx.xyz/insta' target='_blank'>
+                <i aria-hidden='true' class='fa fa-instagram media' style='line-height: 38px; font-size: 20px;'></i>
             </a>
         </div>
       <!-- Javascript -->
