--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="media/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Beerpong Frampula</title>
+    <title>Beerpong</title>
 </head>
 <body>
 
