--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="media/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Beerpong</title>
+    <title>Beerpong Frampula</title>
 </head>
 <body>
 
@@ -17,7 +17,7 @@
             </div>
             <div class="textinfo">
                 <h1 class="name">Beerpong Frampula</h1>
-                <h2 class="profession">Student | Web Developer</h2>
+                <h2 class="profession">Since 2015</h2>
             </div>
         </div>
             <div class="linkscard_div">
@@ -26,9 +26,9 @@
 		    <!-- <a href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">Instagram logo icons created by Hight Quality Icons - Flaticon</a> -->
                     <li class="list-item"><a href="https://www.facebook.com/beerpongframpula/?locale=it_IT" target="_blank"><img src="media/Facebook_Icon.png" alt="Facebook">Facebook</a></li>
 		    <!-- <a href="https://www.flaticon.com/free-icons/facebook" title="facebook icons">Facebook icons created by Freepik - Flaticon</a>  -->
-		    <li class="list-item"><a href="https://wa.me/393513275210" target="_blank"><img src="media/Whatsapp_Icon.png" alt="WhatsApp"> WhatsApp</a></li>
+		            <li class="list-item"><a href="https://wa.me/393513275210" target="_blank"><img src="media/Whatsapp_Icon.png" alt="WhatsApp"> WhatsApp</a></li>
 		    <!-- <a href="https://www.flaticon.com/free-icons/whatsapp" title="whatsapp icons">Whatsapp icons created by Freepik - Flaticon</a> -->
-		    <li class="list-item"><a href="https://t.me/beerpongframpula" target="_blank"><img src="media/Telegram_Icon.png" alt="Telegram">Telegram</a></li>
+                    <li class="list-item"><a href="https://t.me/beerpongframpula" target="_blank"><img src="media/Telegram_Icon.png" alt="Telegram">Telegram</a></li>
 		    <!-- <a href="https://www.flaticon.com/free-icons/telegram" title="telegram icons">Telegram icons created by Pixel perfect - Flaticon</a> -->
                 </ul>
             </div>
