--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="textinfo">
                 <h1 class="name">Beerpong Frampula</h1>
-                <h2 class="profession">Since 2015</h2>
+                <h2 class="profession">Since WLF</h2>
             </div>
         </div>
             <div class="linkscard_div">
