--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="media/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="media/Scritta_BPF.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css?v=2">
     <title>Beerpong Frampula</title>
 </head>
