--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
         </div>
             <div class="linkscard_div">
                 <ul>
-                    <li class="list-item"><a href="https://www.instagram.com/beerpongframpula/" target="_blank"><img src="media/Instagram_Icon.png" alt="Instagram">Instagram</a></li>
-		    <!-- <a href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">Instagram logo icons created by Hight Quality Icons - Flaticon</a> -->
                     <li class="list-item"><a href="https://www.facebook.com/beerpongframpula/?locale=it_IT" target="_blank"><img src="media/Facebook_Icon.png" alt="Facebook">Facebook</a></li>
-		    <!-- <a href="https://www.flaticon.com/free-icons/facebook" title="facebook icons">Facebook icons created by Freepik - Flaticon</a>  -->
-		            <li class="list-item"><a href="https://wa.me/393513275210" target="_blank"><img src="media/Whatsapp_Icon.png" alt="WhatsApp"> WhatsApp</a></li>
-		    <!-- <a href="https://www.flaticon.com/free-icons/whatsapp" title="whatsapp icons">Whatsapp icons created by Freepik - Flaticon</a> -->
+                    <!-- <a href="https://www.flaticon.com/free-icons/facebook" title="facebook icons">Facebook icons created by Freepik - Flaticon</a>  -->
+                    <li class="list-item"><a href="https://www.instagram.com/beerpongframpula/" target="_blank"><img src="media/Instagram_Icon.png" alt="Instagram">Instagram</a></li>
+                    <!-- <a href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">Instagram logo icons created by Hight Quality Icons - Flaticon</a> -->
+                    <li class="list-item"><a href="https://forms.gle/eU46gBmzzaC9Gd2r6" target="_blank"><img src="media/icona_bicchieri.png" alt="Form Icon">Modulo iscrizioni</a></li>
+                    <!-- <a href="https://www.flaticon.com/free-icons/beer-pong" title="beer pong icons">Beer pong icons created by Freepik - Flaticon</a> -->
                     <li class="list-item"><a href="https://t.me/beerpongframpula" target="_blank"><img src="media/Telegram_Icon.png" alt="Telegram">Telegram</a></li>
 		    <!-- <a href="https://www.flaticon.com/free-icons/telegram" title="telegram icons">Telegram icons created by Pixel perfect - Flaticon</a> -->
+                    <li class="list-item"><a href="https://wa.me/393513275210" target="_blank"><img src="media/Whatsapp_Icon.png" alt="WhatsApp"> WhatsApp</a></li>
+                    <!-- <a href="https://www.flaticon.com/free-icons/whatsapp" title="whatsapp icons">Whatsapp icons created by Freepik - Flaticon</a> -->
                 </ul>
             </div>
     </div>
