--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <!-- <a href="https://www.flaticon.com/free-icons/facebook" title="facebook icons">Facebook icons created by Freepik - Flaticon</a>  -->
                     <li class="list-item"><a href="https://www.instagram.com/beerpongframpula/" target="_blank"><img src="media/Instagram_Icon.png" alt="Instagram">Instagram</a></li>
                     <!-- <a href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">Instagram logo icons created by Hight Quality Icons - Flaticon</a> -->
-                    <li class="list-item"><a href="https://forms.gle/eU46gBmzzaC9Gd2r6" target="_blank"><img src="media/icona_bicchieri.png" alt="Form Icon">Modulo iscrizioni</a></li>
+                    <li class="list-item"><a href="https://tally.so/r/mYegaB" target="_blank"><img src="media/icona_bicchieri.png" alt="Form Icon">Modulo iscrizioni</a></li>
                     <!-- <a href="https://www.flaticon.com/free-icons/beer-pong" title="beer pong icons">Beer pong icons created by Freepik - Flaticon</a> -->
                     <li class="list-item"><a href="https://t.me/beerpongframpula" target="_blank"><img src="media/Telegram_Icon.png" alt="Telegram">Telegram</a></li>
 		    <!-- <a href="https://www.flaticon.com/free-icons/telegram" title="telegram icons">Telegram icons created by Pixel perfect - Flaticon</a> -->
