--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                 <ul>
                     <li class="list-item"><a href="https://www.facebook.com/beerpongframpula/?locale=it_IT" target="_blank"><img src="media/Facebook_Icon.png" alt="Facebook">Facebook</a></li>
                     <!-- <a href="https://www.flaticon.com/free-icons/facebook" title="facebook icons">Facebook icons created by Freepik - Flaticon</a>  -->
-                    <li class="list-item"><a href="https://www.instagram.com/beerpongframpula/" target="_blank"><img src="media/Instagram_Icon.png" alt="Instagram">Instagram</a></li>
+                    <!-- LINK INSTAGRAM GHOSTATO -->
+                    <!-- <li class="list-item"><a href="https://www.instagram.com/beerpongframpula/" target="_blank"><img src="media/Instagram_Icon.png" alt="Instagram">Instagram</a></li> -->
                     <!-- <a href="https://www.flaticon.com/free-icons/instagram-logo" title="instagram logo icons">Instagram logo icons created by Hight Quality Icons - Flaticon</a> -->
                     <li class="list-item"><a href="https://tally.so/r/mYegaB" target="_blank"><img src="media/icona_bicchieri.png" alt="Form Icon">Modulo iscrizioni</a></li>
                     <!-- <a href="https://www.flaticon.com/free-icons/beer-pong" title="beer pong icons">Beer pong icons created by Freepik - Flaticon</a> -->
