First Try for Privacy voice in the bottom of the page

--- a/index.html
+++ b/index.html
@@ -36,5 +36,9 @@
                 </ul>
             </div>
     </div>
+
+    <footer class="site-footer">
+        <a href="https://drive.google.com/file/d/11CgKT53v5hA_vzgQJJU4hmVydI32r2jT/view?usp=drive_link/privacy.html" target="_blank" rel="noopener">Privacy</a>
+    </footer>
 </body>
 </html>
