Second Try with Privacy button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
                     <!-- <a href="https://www.flaticon.com/free-icons/whatsapp" title="whatsapp icons">Whatsapp icons created by Freepik - Flaticon</a> -->
                 </ul>
             </div>
+        <!-- voce Privacy -->
+            <div class="privacy_div">
+                <a href="https://drive.google.com/file/d/11CgKT53v5hA_vzgQJJU4hmVydI32r2jT/view?usp=drive_link/privacy.html" target="_blank" rel="noopener">Privacy</a>
+            </div>
     </div>
+
 
 </body>
 </html>
