Second Try with Privacy button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
             <div class="linkscard_div">
                 <ul>
-                    <li class="list-item"><a href="https://www.facebook.com/beerpongframpula/?locale=it_IT" target="_blank"><img src="media/Facebook_Icon.png" alt="Facebook">Facebook</a></li>
+                    <li class="list-item"><a href="https://www.facebook.com/beerpongframpula/?locale=it_IT" target="_blank"><img src="media/Facebook_Icon.png" alt="Facebook">Face</a></li>
                     <!-- <a href="https://www.flaticon.com/free-icons/facebook" title="facebook icons">Facebook icons created by Freepik - Flaticon</a>  -->
                     <!-- LINK INSTAGRAM GHOSTATO -->
                     <!-- <li class="list-item"><a href="https://www.instagram.com/beerpongframpula/" target="_blank"><img src="media/Instagram_Icon.png" alt="Instagram">Instagram</a></li> -->
